# picar

./: .gitignore  CMakeLists.txt  NOTE.txt  PicarMini.md  README-data.md  README-performance.md  README.md  actuator-adafruit_hat.py  actuator-drv8835.py  arduino-rc-to-arduino.py  arduino-rc-to-pca9658.py  arduino-rc.py  bandwidth  benchmark_timings.sh  benchmark_timings_Pi.sh  benchmark_timings_Pi_PALLOC.sh  benchmark_timings_Pi_RT.sh  benchmark_timings_UP.sh  benchmark_timings_x2.sh  benchmark_timings_x2_cpu.sh  camera-opencv-latency.py  camera-opencv.py  camera-webcam.py  camera.py  cfg.py  data_shuffled.py  data_shuffled_btn.py  flip-data.py  input_kbd.py  kerasModel.py  model-complexity.ods  model.py  model_btn.py  multicore_timings.sh  mystat.py  out-mencoder.avi  package.xml  palloc-setup.sh  params.py  params_btn.py  (+40 more)
BinaryNet/: Data.lua  LuaCSV.lua  LuaRandomSample.lua  MakeDataSets.lua  README.md  SqrHingeEmbeddingCriterion.lua  adaMax_binary_clip_shift.lua  adam_binary_clip_b.lua  params.lua  train.lua
MiniModel/: checkpoint  events.out.tfevents.1507222175.LAPTOP-HB2P4BRL  model.ckpt.index
MiniModel2/: checkpoint  events.out.tfevents.1507229962.LAPTOP-HB2P4BRL  model.ckpt.index
MiniModelNew/: events.out.tfevents.1515215557.HOME  events.out.tfevents.1515215752.HOME  events.out.tfevents.1515215789.HOME
MiniModelNew2/: events.out.tfevents.1515215612.HOME
MiniModelNew3/: checkpoint  events.out.tfevents.1515215367.HOME  events.out.tfevents.1515215498.HOME
MiniModelNew4/: events.out.tfevents.1515215594.HOME  events.out.tfevents.1515215683.HOME  events.out.tfevents.1515215710.HOME  model.ckpt.data-00000-of-00001  model.ckpt.index
MiniModelSynced/: checkpoint  events.out.tfevents.1516926119.HOME  model.ckpt.data-00000-of-00001  model.ckpt.index
MiniModelSynced2/: checkpoint  events.out.tfevents.1516849877.HOME  model.ckpt.data-00000-of-00001  model.ckpt.index
Timing/: LLC_2modelcore01.txt  LLC_2modelcore23.txt  LLC_4modelcore1.txt  LLC_4modelcore2.txt  LLC_4modelcore3.txt  time_1c.csv  time_2c.csv  time_2model_core01.txt  time_2model_core23.txt  time_3c.csv  time_4c.csv  time_4model_core0.txt  time_4model_core1.txt  time_4model_core2.txt  time_4model_core3.txt  time_data.csv
arduino/: rc_donkey.ino  rc_flysky.ino  rc_motor_drv8833.ino  rc_newbright.ino  rc_tx2.ino
car_model/: CMakeLists.txt
car_model/launch/: display.launch
car_model/rviz/: urdf.rviz
car_model/src/: car_publisher.py
car_model/urdf/: carModel.urdf  carModel.xacro
data/: data.csv
datasets/: video.py
deep-tesla-directory/: data_shuffled.py  params.py  preprocess.py
deeptesla-directory/: angle_publisher.py  controller.py  dagger.py  daggerROS.py  data_shuffled.py  drive.py  model.py  params.py  preprocess.py  run.py  rviz_driver.py  stream_driver.py  train.py  video_driver.py  visualize.py
epochs/: out-key-0.csv  out-key-1.csv  out-key-10.csv  out-key-100.csv  out-key-101.csv  out-key-102.csv  out-key-103.csv  out-key-104.csv  out-key-105.csv  out-key-106.csv  out-key-107.csv  out-key-108.csv  out-key-109.csv  out-key-11.csv  out-key-110.csv  out-key-111.csv  (+355 more)
src/car_model/: CMakeLists.txt  notes.txt  package.xml  setup.py
src/car_model/config/: diffdrive.yaml
src/car_model/launch/: display.launch  gazebo.launch  stream_driver.launch  twist_driver.launch  video_driver.launch
src/car_model/rviz/: carDriver.rviz  gazebo.rviz  twist.rviz  urdf.rviz
src/car_model/src/: car_navigator.py  car_publisher.cpp  car_publisher.py  image_converter.py  publisher.cpp  stream_converter.py  twist_driver.py  video_converter.py
src/car_model/urdf/: carModel.urdf  carModel.xacro  gazeboCar.xacro
(+1337 files in other folders)
