<package>
  <name>picar_base</name>
  <version>0.1.0</version>

  <maintainer email="heechul.yun@ku.edu">Heechul Yun</maintainer>
  <license>BSD</license>

  <description>picar controller </description>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>

  </export>
</package>
