<package>

        <name>car_model</name>
        <version>1.2.4</version>
        <description>
                This package contains the urdf model for the RC-car
        </description>
        <maintainer email="jmuoghal@ittc.ku.edu">James Muoghalu</maintainer>
        <license>BSD</license>

        <buildtool_depend>catkin</buildtool_depend>

        <build_depend>rospy</build_depend>
        <build_depend>roscpp</build_depend>
        <build_depend>std_msgs</build_depend>
        <build_depend>sensor_msgs</build_depend>
        <build_depend>nav_msgs</build_depend>
        <build_depend>geometry_msgs</build_depend>
        <build_depend>tf</build_depend>
        <run_depend>rospy</run_depend>
        <run_depend>roscpp</run_depend>
        <run_depend>std_msgs</run_depend>
        <run_depend>sensor_msgs</run_depend>
        <run_depend>nav_msgs</run_depend>
        <run_depend>geometry_msgs</run_depend>
        <run_depend>tf</run_depend>

</package>
